fix spacing reposive footer

--- a/web/components/Footer/styles.module.less
+++ b/web/components/Footer/styles.module.less
@@ -53,7 +53,16 @@
   max-width: 1440px;
   margin: 0 auto;
 }
-
+@media (max-width: 1440px) {
+  .spacing {
+    padding: 0px 50px;
+  }
+}
+@media (max-width: 1220px) {
+  .spacing {
+    padding: 0px 36px;
+  }
+}
 @media (max-width: 768px) {
   .spacing {
     padding: 0 42px;
